--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -1,17 +1,38 @@
 @import "./foundation/settings";
 @import "~foundation-sites/scss/foundation";
 @include foundation-everything;
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 // place global css here
 
 @mixin gradientText {
-  background: linear-gradient(to right, red, blue);
   background-clip: text;
   color: transparent;
 }
 
-h2 {
-  @include gradientText;
+@mixin button {
+  padding: 15px;
+  border-radius: 10px;
+  transition: $tran1;
+  text-decoration: none;
+  display: block;
+  text-align: center;
 }
+
+@mixin glass{
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  background-color: rgba(90, 5, 5, 0.05);
+}
+
+$font1: "Playwrite DK Loopet", cursive;
+$font2: "Noto Sans", sans-serif;
+$color1: #FFC600;
+$color2: #072AC8;
+$color3: #A2D6F9;
+$color4: #1E96FC;
+$tran1: background-color 0.5s ease;
+$tran2: color 0.5s ease;
 
 *,
 *::before,
@@ -22,4 +43,251 @@ h2 {
 :root {
   -moz-tab-size: 4;
   tab-size: 4;
+}
+
+html {
+  height: 100%;
+}
+
+.font-1 {
+  font-family: $font1;
+}
+
+.landing-r-text {
+  color: #fff;
+}
+
+.text-c {
+  text-align: center;
+}
+
+.color-1 {
+  color: $color1;
+}
+
+.color-2 {
+  color: $color2;
+}
+
+.bm-3 {
+  margin-bottom: 3rem;
+}
+
+.bp-2 {
+  padding-bottom: 2rem;
+}
+
+.nav-left {
+  text-align: left;
+  padding-left: 4rem;
+}
+
+.nav-right {
+  text-align: right;
+  padding-right: 4rem;
+}
+
+.nav-bar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-family: $font1;
+}
+
+.nav-bar > * {
+  flex: 0 1 33.33%;
+}
+
+.nav-bar a, .sign-out-btn {
+  color: #000;
+  font-size: 1.2rem;
+  transition: $tran2;
+}
+
+.nav-bar a:hover, .sign-out-btn:hover {
+  color: $color1;
+  transition: $tran2;
+}
+
+.nav-bar:focus, .sign-out-btn:focus {
+  color: $color2;
+}
+
+.sign-out-btn:hover {
+  cursor: pointer;
+}
+
+.welcome-desc {
+  padding-top: 1rem;
+  width: 70%;
+  margin: 0 auto;
+  font-family: $font2;
+  font-weight: 400;
+}
+
+.top-bar-logo {
+  height: 100px;
+  width: 100px;
+}
+
+.center-logo {
+  background: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.landing-1 {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  background: linear-gradient(110deg, #fff 50%, #FFC600 calc(50% + 1px));
+}
+
+.landing-2 {
+  height: 500px;
+  background: linear-gradient(70deg, #fff 50%, #FFC600 calc(50% + 1px));
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.landing-text {
+  background: linear-gradient(110deg, #FFC600 50%, #fff 51%);
+  @include gradientText;
+  font-family: $font1;
+  padding: 1rem;
+}
+
+.landing-p1 {
+  font-size: 1.2rem;
+}
+
+.scroll-icon {
+  text-align: center;
+  position: absolute;
+  bottom: 5%;
+  color: #fff;
+  font-size: 2rem;
+  filter: drop-shadow(0 0 1px #fff);
+  transform: scale(1);
+  animation: pulse 2s infinite;
+  scroll-behavior: smooth;
+}
+
+.scroll-icon:hover {
+  cursor: pointer;
+  color: #fff;
+}
+
+.scroll-icon:focus {
+  color: $color3;
+}
+
+.scroll-icon:focus-visible {
+  border: 1px solid #fff;
+  border-radius: 10px;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+  }
+  70% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(0.95);
+  }
+}
+
+.landing-2-left, .landing-2-right {
+  height: 100%;
+  width: 50%;
+}
+
+.landing-2-left { 
+  @include glass;
+  height: 90%;
+  width: 30%;
+  overflow: auto;
+}
+
+.landing-2-right {
+  @include glass;
+  height: 90%;
+  width: 30%;
+}
+
+.welcome-text {
+  padding: 1rem;
+}
+
+.sign-up-link, .register-link {
+  background-color: $color2;
+  color: #fff;
+  font-weight: 500;
+  @include button;
+  width: 150px;
+  margin: 4rem auto 0 auto;
+}
+
+.sign-up-link:hover, .register-link:hover {
+  background-color: $color4;
+  color: #fff;
+  cursor: pointer;
+}
+
+.sign-up-link:focus, .register-link:focus {
+  background-color: $color3;
+}
+
+.register-link {
+  border: none
+}
+
+.register-link:last-child {
+  margin-top: 1rem;
+}
+
+.reg-page {
+  background: linear-gradient(110deg, #fff 50%, #FFC600 calc(50% + 1px));
+  height: 100vh;
+  padding: 3rem;
+}
+
+.reg-form {
+  @include glass;
+  width: 50%;
+  text-align: center;
+}
+
+.reg-form p {
+  text-align: left;
+  font-family: $font2;
+  padding-left: 1rem;
+}
+
+.reg-form input {
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+  .landing-2-left {
+    width: 100%;
+  }
+  .landing-2-right {
+    width: 100%;
+  }
+  .color-1 {
+    color: $color2;
+  }
+  .landing-r-text {
+    color: $color2;
+  }
+  .reg-form {
+    width: 100%;
+  }
 }
