--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -17,7 +17,7 @@
 @mixin glass{
   border-radius: 10px;
   backdrop-filter: blur(10px);
-  background-color: rgba(90, 5, 5, 0.05);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 $font1: "Playwrite DK Loopet", cursive;
@@ -50,10 +50,6 @@ body {
 
 .font-1 {
   font-family: $font1;
-}
-
-.landing-r-text {
-  color: #fff;
 }
 
 .text-c {
@@ -165,6 +161,7 @@ body {
 }
 
 .landing-text {
+  font-size: 3rem;
   color: $color1;
   font-family: $font1;
   padding: 1rem;
@@ -178,17 +175,17 @@ body {
   text-align: center;
   position: absolute;
   bottom: 5%;
-  color: #fff;
+  color: $color1;
   font-size: 2rem;
   filter: drop-shadow(0 0 1px #fff);
   transform: scale(1);
-  animation: pulse 2s infinite;
+  animation: spin 3s linear infinite;
   scroll-behavior: smooth;
 }
 
 .scroll-icon:hover {
   cursor: pointer;
-  color: #fff;
+  color: $color2;
 }
 
 .scroll-icon:focus {
@@ -200,16 +197,9 @@ body {
   border-radius: 10px;
 }
 
-@keyframes pulse {
-  0% {
-    transform: scale(0.95);
-  }
-  70% {
-    transform: scale(1.3);
-  }
-  100% {
-    transform: scale(0.95);
-  }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 .landing-2-left { 
@@ -225,13 +215,34 @@ body {
   width: 30%;
 }
 
+.checked-in-block {
+  display: flex;
+  gap: 50px;
+  padding: 2rem;
+}
+
 .welcome-text {
-  padding: 1rem;
+  font-size: 2rem;
+}
+
+.p1-bd {
+  border-left: 10px solid $color1;
+  padding-left: 1rem;
+}
+
+.p2-bd {
+  border-right: 10px solid $color2;
+}
+
+.p3-bd {
+  border-left: 10px solid $color3;
+  padding-left: 1rem;
 }
 
 .sign-up-link, .register-link, .sign-in-link, .link {
   border: 2px solid $color2;
   color: $color2;
+  background-color: transparent;
   font-weight: 500;
   @include button;
   width: 150px;
@@ -303,7 +314,6 @@ body {
   font-size: 1.2rem;
   font-weight: 600;
   transition: $tran2;
-  margin-top: 1rem;
 }
 
 .checked-in-link:focus {
@@ -376,6 +386,7 @@ body {
 }
 
 .checkin-text {
+  font-size: 2rem;
   color: $color1;
   font-family: $font1;
   padding: 1rem;
@@ -560,6 +571,10 @@ body {
   border-radius: 10px;
 }
 
+.chart-example-svg {
+  background: transparent;
+}
+
 .chart-bg {
   text-align: center;
   overflow-x: auto;
@@ -576,6 +591,20 @@ body {
   display: inline;
 }
 
+.mobile-tip {
+  color: #fff;
+  font-weight: 600;
+  font-family: $font2;
+  text-align: center;
+  display: none;
+}
+
+@media screen and (max-width: 1428px) {
+  .checked-in-block {
+    @include glass();
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .landing-2-left {
     width: 100%;
@@ -583,13 +612,26 @@ body {
   .landing-2-right {
     width: 100%;
   }
-  .color-1 {
-    color: $color2;
-  }
-  .landing-r-text {
-    color: $color2;
-  }
   .reg-form {
+    width: 100%;
+  }
+  .reg-page{
+    padding: 0;
+  }
+  .sign-in-page {
+    padding: 0;
+    width: 100%;
+  }
+  .sign-in-form {
+    width: 100%;
+  }
+  .mb-chart {
+    margin-bottom: 500px;
+  }
+  .mobile-tip {
+    display: block;
+  }
+  .checkin-form {
     width: 100%;
   }
 }
